03-monolith-strangling/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrapp
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: hrapp
  template:
    metadata:
      labels:
        tier: hrapp
    spec:
      containers:
        - name: hrapp
          image: alexandreroman/scg-workshop-monolith-hrapp
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: http
              path: /
            failureThreshold: 3
            periodSeconds: 1
          startupProbe:
            httpGet:
              port: http
              path: /
            failureThreshold: 30
            periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: people
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: people
  template:
    metadata:
      labels:
        tier: people
    spec:
      containers:
        - name: people
          image: alexandreroman/scg-workshop-monolith-people
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: http
              path: /actuator/health/liveness
            failureThreshold: 3
            periodSeconds: 1
          startupProbe:
            httpGet:
              port: http
              path: /actuator/health/readiness
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/config/app
              name: app
      volumes:
        - name: app
          configMap:
            name: app
